# email_password_authentication

./: LICENSE
.github/: FUNDING.yml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs  models.rs  routes.rs  state.rs
backend/src/handlers/: auth.rs
backend/src/services/: email.rs  oauth.rs  token.rs  users.rs  verification.rs
backend/src/tasks/: cleanup_expired_tokens.rs  mod.rs
frontend/: middleware.ts  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/forgot-password/: route.ts
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/me/: route.ts
frontend/src/app/api/auth/refresh/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/auth/resend-code/: route.ts
frontend/src/app/api/auth/reset-password/: route.ts
frontend/src/app/api/auth/verify-email/: route.ts
frontend/src/app/auth/forgot-password/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/auth/reset-password/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: dashboard.tsx
frontend/src/components/auth/: forgot-password-form.tsx  login-form.tsx  register-form.tsx  reset-password-form.tsx
frontend/src/components/dashboard/: user-menu.tsx
frontend/src/context/: auth-context.tsx
frontend/src/lib/: api-client.ts
