[package]
name = "backend"
version = "0.1.0"
edition = "2021"  # Changed from 2024 - editions are 2015, 2018, 2021

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"  # Updated from 0.4
tower-http = { version = "0.6", features = ["cors", "trace"] }  # Updated

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "ipnetwork"] }  # Updated
ipnetwork = "0.20"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }  # Updated

# Crypto & Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }  # Updated

# Error handling
thiserror = "2.0"  # Updated (note: breaking changes)
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }  # Updated

# HTTP & Requests
http = "1.0"
reqwest = { version = "0.12", features = ["json", "default-tls"] }

# Cookies
tower-cookies = "0.10"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"

# Email
lettre = { version = "0.11", features = ["builder", "tokio1-native-tls", "smtp-transport"] }